# ebay_spider

./: .env.sample  .gitignore  README.md  manage.py  pyproject.toml  schema.sql  schema.yml
ebay_spider/: asgi.py  settings.py  urls.py  wsgi.py
product_spider/: apps.py  models.py  serializers.py  urls.py  views.py
product_spider/management/commands/: crawl.py
product_spider/migrations/: 0001_initial.py  0002_alter_product_image_url_alter_product_url_and_more.py
product_spider/scrapy_spiders/: proxy_list.txt  proxy_list_cleaned.txt  scrapy.cfg
product_spider/scrapy_spiders/scrapy_spiders/: items.py  middlewares.py  pipelines.py  settings.py
product_spider/scrapy_spiders/scrapy_spiders/spiders/: ebay.py
tests/: conftest.py  test_database_connection.py
